# SourceProp

./: .rootlogon.C  LICENSE  Makefile  README  README.md
BLR/: BLRLines.cc  BLRLines.h  Line.cc  Line.h  Makefile  Utilities.cc  Utilities.h  compareTau.C  drawAtt.C  drawTau.C  gg_absorption_distance.c  tau.cxx  tauBLR.cxx
CRPropaTools/: CMakeLists.txt  README
CRPropaTools/PionDecay/: PionDecay.cc  PionDecay.h
CRPropaTools/ROOTEvent/: OutputROOTEvent.cc  OutputROOTEvent.h  ROOTEvent.cc  ROOTEvent.h
CRPropaTools/Run/: examples.txt  pionDecay.py  run.sh  run1D.py  runSB.py  setpaths.csh  setpaths_butinah.sh  subMany.sh
CRPropaTools/SimpleComposition/: SimpleComposition.cc  SimpleComposition.h
CRPropaTools/macros/: photonField.C  plotBranch.C  plotLoss.C  plotPD.C
FitFiles/: AAGHRW05.txt  AugerFirstMinimum.txt  AugerSecondMinimum.txt  Standard.txt
Marco/: PRDFiducial.txt  PRDFiducialE.txt  PRDFiducialQ.txt  PRDFiducialS21.txt  PRDFiducialS23.txt  PRDGalactic.txt  PRDSys.txt  Proton.txt  Proton2.txt  Proton3.txt  README  evo_0.txt  evo_AAGHRW05.txt  evo_AGN.txt  evo_SFR.txt  evo_m2.txt  evo_m4.txt  evo_p2.txt  evo_p4.txt  evo_uniform.txt  evo_uniformCutAt3.txt  makeEvo.csh  makePEvo.csh  pFrac1.txt  pFrac1Sys.txt  pFrac1UFA.txt  pFrac2.txt  pFrac2Sys.txt  pFrac2UFA.txt  pFrac3.txt  pFrac3Sys.txt  pFrac3UFA.txt  pFrac4.txt  pFrac4Sys.txt  pFrac4UFA.txt  pFrac5.txt  pFrac5Sys.txt  pFrac5UFA.txt  pFrac6.txt  pFrac6Sys.txt  (+19 more)
Python/: README.md  calcTables.py  calc_pairproduction.py  photonField.py
config/: PRDFiducial.txt  PRDGalactic.txt
data/: IceTop73.txt  (+526 more)
(+130 files in other folders)
