ADD_CUSTOM_COMMAND(
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/ROOTEventDictionary.cc
    COMMAND rootcint -f ${CMAKE_CURRENT_BINARY_DIR}/ROOTEventDictionary.cc -c -p ${CMAKE_CURRENT_SOURCE_DIR}/ROOTEvent/ROOTEvent.h ${CMAKE_CURRENT_SOURCE_DIR}/ROOTEvent/ROOTEvent.LinkDef.h
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/ROOTEvent/ROOTEvent.h
)

ADD_CUSTOM_TARGET(ROOTEVENTDICT DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/ROOTEventDictionary.cc)

SET (ROOTEvent_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/ROOTEvent/ROOTEvent.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ROOTEvent/OutputROOTEvent.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SimpleComposition/SimpleComposition.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/PionDecay/PionDecay.cc
  ${CMAKE_CURRENT_BINARY_DIR}/ROOTEventDictionary.cc
  PARENT_SCOPE
)

install(DIRECTORY . DESTINATION include/crpropa
        FILES_MATCHING PATTERN "*.h"
        PATTERN "*LinkDef*" EXCLUDE)

